YAS-CA/objects/Rule__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Class__c</fullName>
        <label>Class</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Example__c</fullName>
        <label>Example</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Info_URL__c</fullName>
        <label>External Info URL</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_Of_Properties__c</fullName>
        <label>No Of Properties</label>
        <summaryForeignKey>Property__c.Rule__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <defaultValue>3</defaultValue>
        <label>Priority</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rule_Set__c</fullName>
        <label>Rule Set</label>
        <referenceTo>Rule_Set__c</referenceTo>
        <relationshipLabel>Rules</relationshipLabel>
        <relationshipName>Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Since__c</fullName>
        <defaultValue>&apos;5.5.0&apos;</defaultValue>
        <label>Since</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Best Practices</fullName>
                </value>
                <value>
                    <fullName>Code Style</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Documentation</fullName>
                </value>
                <value>
                    <fullName>Error Prone</fullName>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>XML_Format__c</fullName>
        <label>XML Format</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Rule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Class__c</columns>
        <columns>Rule_Set__c</columns>
        <columns>Active__c</columns>
        <columns>Priority__c</columns>
        <columns>Message__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>